# smallNES-emu

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: 6502.c.08FE6637308686FB.idx  6502.h.3747C0F72EC66A50.idx  SDL.h.F07FC959701BF5F0.idx  SDL_assert.h.BB8727BA820D957D.idx  SDL_atomic.h.6B8A2B04A801D1F8.idx  SDL_audio.h.16F54ECE2C27CB34.idx  SDL_blendmode.h.9851E62506B1DE69.idx  SDL_clipboard.h.DEC81D7016FD4A8C.idx  SDL_config.h.7C84E7D01C3C79EB.idx  SDL_cpuinfo.h.1EE5EC634E900AD6.idx  SDL_endian.h.90A50589CB227C04.idx  SDL_error.h.57B7CA88136A25C6.idx  SDL_events.h.D53DC80B1A551D88.idx  SDL_filesystem.h.2B21817783B1651B.idx  SDL_gamecontroller.h.0E7F54361AB8FF7B.idx  SDL_gesture.h.2658E682AEC36DA6.idx  SDL_guid.h.C1AECF3B799D48FB.idx  SDL_haptic.h.0AAE54334210DBDA.idx  SDL_hidapi.h.C8A7F6A0A5DBE310.idx  SDL_hints.h.87BE3E5B8A08B35A.idx  SDL_joystick.h.00BDAF38AFD4E217.idx  SDL_keyboard.h.6E47CE92AF8D7967.idx  SDL_keycode.h.9C65EED3FF363D1F.idx  SDL_loadso.h.3895B31B8CA5DE71.idx  SDL_locale.h.4F2465CF90BAF553.idx  SDL_log.h.708FC558250AAF1B.idx  SDL_main.h.8D18ADC010839ED2.idx  SDL_messagebox.h.66201BDAD33AE411.idx  SDL_metal.h.10FBD9A0E3F40237.idx  SDL_misc.h.B6F9A5E05450C213.idx  SDL_mouse.h.8D5A8DE48D1C8B46.idx  SDL_mutex.h.0D1A07A5732CA109.idx  SDL_pixels.h.6E8D719E65EA44DB.idx  SDL_platform.h.7C2625D2118C73DF.idx  SDL_power.h.0FF035ECCB556945.idx  SDL_quit.h.98CB780E43FF6897.idx  SDL_rect.h.50FD165CB93FCD07.idx  SDL_render.h.D5EF1D0AA8DC9C02.idx  SDL_rwops.h.C778B1CFE1332413.idx  SDL_scancode.h.741307A1A7E17AD0.idx  (+25 more)
src/: main.c  utils.h
src/emulator/: global.c  global.h
src/emulator/6502/: 6502.c  6502.h  instructions.c  (+1 more)
src/include/: 6502.c  6502.h  cartridge.c  cartridge.h  debug.c  debug.h  instructions.c  instructions.h  logging.h  mapper.c  mapper.h  ppu.c  ppu.h  ppu_registers.h  types.h
src/lib/: 6502.c  6502.h  cartridge.c  cartridge.h  instructions.c  instructions.h  mapper.c  mapper.h  ppu.c  ppu.h
(+8 files in other folders)
